--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://blit0lhwzs5ndxthhzyu-mysql.services.clever-cloud.com:3306/blit0lhwzs5ndxthhzyu?serverTimezone=UTC
-spring.datasource.username=udshqhp9s58sxahe
-spring.datasource.password=fGfKf6mPU0Xv4BVLrv6E
+spring.datasource.url=jdbc:mysql://bdtests2023.000webhostapp.com:3306/id20504352_testcoppel?serverTimezone=UTC
+spring.datasource.username=id20504352_developer23
+spring.datasource.password=bd_Cop65#54h
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
