--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://bdtests2023.000webhostapp.com:3306/id20504352_testcoppel?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/id20504352_testcoppel?serverTimezone=UTC
 spring.datasource.username=id20504352_developer23
 spring.datasource.password=bd_Cop65#54h
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
