--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/id20504352_testcoppel?serverTimezone=UTC
-spring.datasource.username=id20504352_developer23
-spring.datasource.password=bd_Cop65#54h
+spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10608391?serverTimezone=UTC
+spring.datasource.username=sql10608391
+spring.datasource.password=v3kZwJUbBX
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
