--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10608391?serverTimezone=UTC
-spring.datasource.username=sql10608391
-spring.datasource.password=v3kZwJUbBX
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://containers-us-west-181.railway.app:6023/railway?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=3ohvPB4WkRAHXZBFZDba
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
